correct overflow in header

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -21,6 +21,8 @@ body {
     background-color: #F1F1F6;
     height: 5rem;
     position: fixed;
+    top: 0;
+    left: 0;
     padding: 10px;
     width: 100%;
     height: 10%;
@@ -28,6 +30,8 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    overflow-y: hidden;
+    z-index: 1000;
 
      &__title {
         font-size: 1.2rem;
@@ -43,13 +47,15 @@ body {
      &__list {
         display: flex;
         justify-content: space-around;
+        align-items: center;
+        height: 100%;
         display: none;
         color: #AE00FB;
     
         &__menu {
             font-family: $font-family1;
             font-size: 1rem;
-            margin: 1rem;
+            margin: 0 1rem;
             cursor: pointer;
             padding: 5px;
             border-radius: 4%;
@@ -111,6 +117,7 @@ body {
     display: flex;
     flex-direction: row;
     padding: 30px;
+    overflow: auto;
  }
 
 .footer {
