--- a/src/styles/layout/_projects.scss
+++ b/src/styles/layout/_projects.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow-y: hidden;
 
     &__title {
     color: #472183;
@@ -83,6 +84,7 @@
         position: relative;
         overflow: hidden;
         border-radius: 1.5rem;
+        overflow-y: auto;
 
          &__img {
             width: 85%;
